--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.apache.commons:commons-collections4:4.4'
-
-
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
+	implementation 'com.google.guava:guava:31.1-jre'
 
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
